<resources>
    <string name="app_name">Cotton_Ticket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_ticket">Liste tickets</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="avatar">Avatar</string>
    <string name="email_address">Email Address</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="connexion">Connexion</string>
    <string name="avatar_icone">avatar icone</string>
    <string name="logo_cottonticket">logo_cottonTicket</string>
    <string name="creation_ticket_technique">Ticket \n Technique</string>
    <string name="creation_ticket_pedagogique">Ticket \n pédagogique</string>
    <string name="textHome">TextView</string>
    <string name="titleHome">Dépot de Ticket</string>
    <string name="id_ticket">id_ticket</string>
    <string name="date_ouverture">date_ouverture</string>
    <string name="resolution">resolution</string>
    <string name="clos">clos</string>
    <string name="date_clos">date_clos</string>
    <string name="voir_ticket">voir ticket</string>
    <string name="commentaire">Entrez votre commentaire ici</string>
    <string name="button_commentaire">Envoyer</string>
    <string name="question1">Niveau d\'urgence</string>
    <string name="reponse1">Niveau d\'urgence</string>
    <string name="question2">Compétences visées</string>
    <string name="reponse2">Compétences visées</string>
    <string name="question3">Tâche à accomplir</string>
    <string name="reponse3">Tâche à accomplir</string>
    <string name="question4">Récapitulatif du travail à fournir</string>
    <string name="reponse4">Récapitulatif du travail à fournir</string>
    <string name="question5">Difficultés rencontrées</string>
    <string name="reponse5">Difficultés rencontrées</string>
    <string name="question6">Hypothèses émises</string>
    <string name="reponse6">Hypothèses émises</string>
    <string name="question7">Demande précise d\'aide</string>
    <string name="reponse7">Demande précise d\'aide</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="textType">Type de question</string>
    <string name="buttonModifier">Modifier</string>
    <string-array name="type_array">
        <item>Defaut</item>
        <item>Espace collaboratif</item>
        <item>Solution erp</item>
        <item>Plateforme elearning</item>
    </string-array>
</resources>