<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.cotton_ticket.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_peda"
            app:destination="@id/nav_peda" />
        <action
            android:id="@+id/action_nav_home_to_nav_technique"
            app:destination="@id/nav_technique" />
    </fragment>

    <fragment
        android:id="@+id/nav_ticket"
        android:name="com.example.cotton_ticket.ui.list.ListFragment"
        android:label="@string/menu_ticket"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_peda"
        android:name="com.example.cotton_ticket.ui.pedagogy.PedagogyFragment"
        android:label="@string/creation_ticket_pedagogique"
        tools:layout="@layout/fragment_pedagogy" />

    <fragment
        android:id="@+id/nav_technique"
        android:name="com.example.cotton_ticket.ui.technical.TechnicalFragment"
        android:label="@string/creation_ticket_technique"
        tools:layout="@layout/fragment_technical" />


    <fragment
        android:id="@+id/nav_deconnection"
        android:label="@string/deconnection"
        tools:layout="@layout/fragment_technical" />
</navigation>